# eigenfaces

./: Makefile  README.md  matrixTest.cpp  output.txt
doc/: imgconv.nb
doc/facetext/: subject01.txt  subject01glasses.txt  subject01happy.txt  subject01leftlight.txt  subject01noglasses.txt  subject01normal.txt  subject01rightlight.txt  subject01sad.txt  subject01sleepy.txt  subject01surprised.txt  subject01wink.txt  subject02centerlight.txt  subject02glasses.txt  subject02happy.txt  subject02leftlight.txt  subject02noglasses.txt  subject02normal.txt  subject02rightlight.txt  subject02sad.txt  subject02sleepy.txt  subject02surprised.txt  subject02wink.txt  subject03centerlight.txt  subject03glasses.txt  subject03happy.txt  subject03leftlight.txt  subject03normal.txt  subject03rightlight.txt  subject03sad.txt  subject03sleepy.txt  subject03surprised.txt  subject03wink.txt  subject04centerlight.txt  subject04glasses.txt  subject04happy.txt  subject04leftlight.txt  subject04noglasses.txt  subject04normal.txt  subject04rightlight.txt  subject04sad.txt  (+121 more)
include/csc450Lib_calc_base/: Function1D.h  PolyFunction1D.h
include/csc450Lib_calc_snle/: DeflatedFunction1D.h  NonLinearSolver.h  NonLinearSolver_bisection.h  NonLinearSolver_hybrid.h  NonLinearSolver_newton.h  NonLinearSolver_secant.h  SolutionNLE.h  SolutionStatus.h
include/csc450Lib_linalg_base/: ColumnVector.h  EigenSystem.h  GetPixels.h  Matrix.h  MatrixGenerator.h  RowVector.h  Subject.h
include/csc450Lib_linalg_eigensystems/: EigenSystem.h  EigenSystemSolver.h  FacialRecognizer.h
include/csc450Lib_linalg_sle/: LinearSolver.h  LinearSolver_LU.h  LinearSystemRecord.h  LinearSystemStatus.h
lib/urivisionlib/: ieHack.xsl  uriVL - readme.xhtml
lib/urivisionlib/.svn/: wc.db
lib/urivisionlib/Development/Projects/Visual10/: uriVisionLib.sln
lib/urivisionlib/Development/Projects/Xcode3/: Info-Kinect.plist
lib/urivisionlib/Documentation/doxygen/: DoxyfileMac.dox  uriVisionLib.dox
lib/urivisionlib/Documentation/doxygen/html/: ActiveContourDetector_8cpp.html  ActiveContourDetector_8cpp__incl.dot  ActiveContourDetector_8cpp__incl.md5  ActiveContourDetector_8cpp_source.html  ActiveContourDetector_8h.html  ActiveContourDetector_8h__dep__incl.dot  ActiveContourDetector__GVF_8cpp__incl.md5  ActiveContourDetector__GVF_8cpp_source.html  ActiveContourDetector__GVF_8h__dep__incl.md5  ActiveContourDetector__GVF_8h_source.html  ActiveContourDetector__balloon_8cpp.html  ActiveContourDetector__balloon_8cpp__incl.dot  ActiveContourDetector__balloon_8cpp__incl.md5  ActiveContourDetector__balloon_8cpp_source.html  ActiveContourDetector__balloon_8h__dep__incl.dot  ActiveContourDetector__balloon_8h__dep__incl.md5  ActiveContourDetector__balloon_8h__incl.md5  ActiveContourDetector__balloon_8h_source.html  BackgroundRemoverTester_8cpp.html  BackgroundRemoverTester_8cpp__incl.dot  BackgroundRemoverTester_8cpp__incl.md5  BackgroundRemoverTester_8cpp_source.html  BackgroundRemoverTester_8h.html  BackgroundRemoverTester_8h__dep__incl.md5  BackgroundRemoverTester_8h__incl.dot  BackgroundRemoverTester_8h__incl.md5  BackgroundRemover_8cpp.html  BackgroundRemover_8cpp__incl.dot  BackgroundRemover_8cpp__incl.md5  BackgroundRemover_8cpp_source.html  BackgroundRemover_8h__dep__incl.dot  BackgroundRemover_8h__incl.dot  BackgroundRemover_8h__incl.md5  BackgroundRemover_8h_source.html  BackgroundRemover__dynamic_8cpp__incl.dot  BackgroundRemover__dynamic_8cpp_source.html  BackgroundRemover__dynamic_8h.html  (+4579 more)
lib/urivisionlib/Projects/Visual10/: uriVisionLib.vcxproj.filters
lib/urivisionlib/Projects/Visual12/: uriVisionLib.vcxproj
lib/urivisionlib/SDK/Demos/: rename_dataFolderPath.h
lib/urivisionlib/SDK/Demos/C++/Image_Processing/Blob_Pattern_Creation/Projects/CMake/: CMakeLists.txt
lib/urivisionlib/SDK/Demos/C++/Numerical/Basic_Linear_Algebra/Projects/CMake/: CMakeLists.txt
lib/urivisionlib/SDK/Demos/C++/Numerical/Optimization/Projects/CMake/: CMakeLists.txt
lib/urivisionlib/SDK/Demos/C++/Numerical/Random_Generator/Projects/CMake/: CMakeLists.txt
output/: eigenface0.txt  eigenface1.txt  eigenface2.txt  eigenface3.txt  eigenface4.txt  eigenface5.txt  eigenface6.txt  eigenface7.txt  eigenface8.txt  eigenface9.txt  face0.txt  face1.txt  face10.txt  face11.txt  face12.txt  face13.txt  face15.txt  face16.txt  face17.txt  face18.txt  face19.txt  face2.txt  face20.txt  face21.txt  face22.txt  face23.txt  face25.txt  face26.txt  face27.txt  face28.txt  face29.txt  face3.txt  face30.txt  face31.txt  face32.txt  face33.txt  face34.txt  face35.txt  face36.txt  face37.txt  (+7 more)
references/Simple Texture C++/: Makefile
references/Simple Texture C++/Headers/: fileIO.h  fileIO_PPM.h  fileIO_SGI.h  fileIO_TGA.h  glPlatform.h
references/Simple Texture C++/Images/: bottlesA.ppm  claypotsA.ppm  claypotsB.ppm
references/Simple Texture C++/Sources/: fileIO_PPM.cpp  fileIO_SGI.cpp  fileIO_TGA.cpp  textureExample.cpp
references/urivisionlib/: uriVL - installation.xhtml  uriVisionLib - license.xhtml
references/urivisionlib/SDK/Demos/: demos_readMe.xhtml
references/urivisionlib/SDK/Demos/C++/Basic/Simple_IP/Projects/CMake/: CMakeLists.txt
references/urivisionlib/SDK/Demos/C++/Computer_Vision/Video_Difference/Projects/CMake/: CMakeLists.txt
references/urivisionlib/SDK/Demos/C++/Computer_Vision/Video_Normal_Flow/Projects/CMake/: CMakeLists.txt
references/urivisionlib/SDK/Demos/C++/Numerical/Basic_Calculus/Projects/CMake/: CMakeLists.txt
src/csc450Lib_calc_base/: Function1D.cpp  PolyFunction1D.cpp
src/csc450Lib_calc_snle/: DeflatedFunction1D.cpp  NonLinearSolver.cpp  NonLinearSolver_bisection.cpp  NonLinearSolver_hybrid.cpp  NonLinearSolver_newton.cpp  NonLinearSolver_secant.cpp  SolutionNLE.cpp
src/csc450Lib_linalg_base/: ColumnVector.cpp  EigenSystem.cpp  GetPixels.cpp  Matrix.cpp  MatrixGenerator.cpp  RowVector.cpp  Subject.cpp
src/csc450Lib_linalg_eigensystems/: EigenSystem.cpp  EigenSystemSolver.cpp  FacialRecognizer.cpp  GetPixels.cpp
src/csc450Lib_linalg_sle/: LinearSolver.cpp  LinearSolver_LU.cpp  LinearSystemRecord.cpp
(+4225 files in other folders)
